<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="takePicture">Take photo</string>
    <string name="browseImage">Pick picture</string>
    <string name="ringtone">Sound</string>
    <string name="buzz">Buzz</string>
    <string name="newPractice">Add meditation</string>
    <string name="editPractice">Edit meditation</string>
    <string name="countDown">Countdown</string>
    <string name="stopWatch">Stopwatch</string>
    <string name="useStopWatch">Stopwatch or countdown?</string>
    <string name="timerNotification">Play sound</string>
    <string name="sessionLength">Session length min.</string>
    <string name="malaSize">Mala size</string>
    <string name="customMalaSize">Mala size (leave empty for default)</string>
    <string name="showNgondro">Show Ngondro</string>
    <string name="settings">Settings</string>
    <string name="app_name">Meditation Tracker</string>
    <string name="ngondroTitle">Ngondro</string>
    <string name="myMeditationsTitle">My meditations</string>
    <string name="guruYoga">Guru Yoga</string>
    <string name="refuge">Refuge</string>
    <string name="diamondMind">Diamond Mind</string>
    <string name="mandalaOffering">Mandala Offering</string>
    <string name="practiceName">Practice name</string>
    <string name="requiredRepetitions">Required repetitions</string>
    <string name="completedRepetitions">Completed repetitions</string>
    <string name="save">Save</string>
    <string name="tapImgToChoose">Tap image to choose</string>
    <string name="imageSourceTitle">Choose image source</string>
    <string name="start">Start practice</string>
    <string name="schedule">Schedule</string>
    <string name="edit">Edit</string>
    <string name="scheduledForToday">Scheduled for today</string>
    <string name="completedToday">Completed today</string>
    <string name="lastPracticeDate">Last practice date</string>
    <string name="scheduledCompletionDate">Scheduled completion date</string>
    <string name="dailyRepetitions">Daily repetitions</string>
    <string name="completionDate">Completion date</string>
    <string name="chooseAction">Choose action</string>
    <string name="msgNoEditNgondro">You cannot delete Ngondro entries. If you\'re not
		interested in them - you can hide them in settings.</string>
    <string name="error">Error</string>
    <string name="info">Information</string>
    <string name="confirmDeletionMsg">Are you sure you want to delete this practice?
	</string>
    <string name="confirmDeletionTitle">Confirm deletion</string>
    <string name="scheduled">Scheduled:</string>
    <string name="completed">Completed:</string>
    <string name="howMuch">How much shall we add this time?</string>
    <string name="stopTimer">Stop timer</string>
    <string name="startTimer">Start timer</string>
    <string name="addMala">Add mala</string>
    <string name="setMalaCount">Set count</string>
    <string name="appUrl">http://fb.me/MeditationTracker</string>
    <string name="about">About&#8230;</string>
    <string name="hi">Hi!</string>
    <string name="version">v7 \'Tara\'
        \n\nWritten by Doo Reelkow.\n
		many thanks to Philipp Rollinger and Kamil Albrycht for translations and
		Vika Onischenko for testing, advises, translations and great help.
		\n\n
		Karmapa chenno!</string>
    <string name="support">Support/discussion→</string>
    <string name="support_web_warning">Go to app\'s blog</string>
    <string name="oneBeadHeptic">Buzz differently</string>
    <string name="oneBeadHepticSummary">Use different patterns on every 10th and 50th
		\"bead\"</string>
    <string name="dimNight">Dim at night time</string>
    <string name="dimNightSummary">Dim session screen during late meditations</string>
    <string name="versionInfo">Version</string>
    <string name="postInstallWelcome">Welcome to the new meditation tracker.
        \n\nThis release allows support for modern versions of Android.
        \n\nIMPORTANT. The manual backup function was removed, only native android backups are now used. Fingers crossed, it works.
	    \n\nKeep up your practices!
	    \n\nYours, Doo.</string>
    <string name="data_category">Data</string>
    <string name="export_summary">Export your practices history to SD card</string>
    <string name="export_title">Export data</string>
    <string name="import_summary">Import your practices history from SD card</string>
    <string name="import_title">Import data</string>
    <string name="error_db_title">Failed opening database!</string>
    <string name="error_db_text">We could not open the practice database. This is bad. Please try to completely restart the app and if the problem persist, let us know at our page.</string>

    <string name="error_import_title">Failed importing database!</string>
    <string name="error_import_text">We could not import the practice database. This is bad. Please let us know at our page.</string>

</resources>