<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:doo="http://schemas.durilka.com/doo"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <com.meditationtracker.controls.MenuBar
        android:id="@+id/menuBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        doo:text="@string/newPractice"/>

    <ImageView
        android:id="@+id/practiceImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:scaleType="centerCrop"
        android:src="@drawable/karmapa"
        android:layout_below="@id/menuBar"
        android:layout_centerHorizontal="true"
        android:minHeight="196dp"
        android:minWidth="150dp">
    </ImageView>

    <TextView
        android:id="@+id/titlePracticeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:text="@string/practiceName"
        android:textColor="#000000"
        android:layout_below="@id/practiceImage"></TextView>

    <EditText
        android:id="@+id/textPracticeName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:inputType="text|textCapSentences|textAutoCorrect"
        android:text=""
        android:layout_below="@id/titlePracticeName"></EditText>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_below="@id/textPracticeName">

        <LinearLayout
            android:id="@+id/sessContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleRepetitionCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/requiredRepetitions"
                android:textColor="#000000"></TextView>


            <EditText
                android:id="@+id/textRepetitionCount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:inputType="number"
                android:text=""></EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleCompletedCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:text="@string/completedRepetitions"
                android:textColor="#000000"></TextView>

            <EditText
                android:id="@+id/textCompletedRepetitions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:inputType="number"
                android:text=""></EditText>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/titleMalaSize"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_weight="1"
        android:text="@string/customMalaSize"
        android:textColor="#000000"
        android:layout_below="@id/LinearLayout03"
        android:layout_height="wrap_content"></TextView>


    <EditText
        android:id="@+id/textMalaSize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:inputType="number"
        android:layout_below="@id/titleMalaSize"></EditText>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:minHeight="60dip"
        ></Button>

</RelativeLayout>
